mcp/tests-mcp-jira/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: atlassian-mcp-external
  namespace: mcp-test
spec:
  hosts:
  - mcp.atlassian.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
